推进50，完善首页样式

--- a/src/components/SmartInput/inputRecord.less
+++ b/src/components/SmartInput/inputRecord.less
@@ -11,13 +11,13 @@
     .list-item {
       width: 96%;
     }
-    :global(.anticon){
+    :global(.anticon) {
       transition: all 0.2s ease;
       -moz-transition: all 0.2s ease; /* Firefox 4 */
       -webkit-transition: all 0.2s ease; /* Safari 和 Chrome */
       -o-transition: all 0.2s ease;
-      &:hover{
-        transform: rotate(180deg)
+      &:hover {
+        transform: rotate(180deg);
       }
     }
   }
