--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -4,6 +4,8 @@
     background-size: cover;
     height: 500px;
     position: relative;
+    z-index: 999;
+    line-height: 0;
     .logo1{
       background: url(../assets/随问logo.png) no-repeat;
       width: 265px;
@@ -28,6 +30,7 @@
       width: 40%;
       left: 50%;
       transform: translateX(-50%);
+     
     }
   }
   .content {
