新增求助模块

--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -6,6 +6,28 @@
     position: relative;
     z-index: 999;
     line-height: 0;
+    .login{
+      position: absolute;
+      right: 20px;
+      top: 30px;
+      color: #fff;
+      .login_btn,.register_btn{
+        height: 30px;
+        width: 60px;
+        background: transparent;
+        color: #fff;
+        border: 1px solid #fff;
+        border-radius: 4px;
+        margin-left: 20px;
+        cursor: pointer;
+        &:hover{
+          background: #fff;
+          color: #333;
+         
+        }
+      }
+      
+    }
     .logo1{
       background: url(../assets/随问logo.png) no-repeat;
       width: 265px;
