--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -64,6 +64,22 @@
         color: #096aee;
       }
     }
+    .more{
+      width: 100px;
+      height: 30px;
+      background: #fff;
+      color: #096aee;
+      border: 1px solid #096aee;
+      border-radius: 4px;
+      text-align: center;
+      line-height: 30px;
+      margin: auto;
+      cursor: pointer;
+      &:hover{
+        background: #096aee;
+        color: #fff;
+      }
+    }
   }
   .subject {
     .wrap {
