--- a/src/global.less
+++ b/src/global.less
@@ -45,3 +45,32 @@ body {
     }
   }
 }
+
+.ecp_top-nav{
+  height: 0 !important;
+  width: 0 !important;
+  border: none !important;
+}
+.ecp_tn-nav{
+  display:none;
+}
+.tn-person-r{
+  display:none;
+}
+.ecp_tn-header{
+  display:none;
+}
+
+.login-r .content{
+  width: 290px !important;
+}
+.login-icon dl{
+  height: 55px !important;
+}
+
+
+.input-group input{
+  outline: none;
+  height: 34px !important;
+  line-height: 34px !important;
+}
