--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -1,13 +1,34 @@
 .wrapper {
   .header {
     background-color: lightblue;
-    height: 64px;
+    height: 84px;
     line-height: 0;
     .inputGroup {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100%;
+      .login{
+        position: absolute;
+        right: 20px;
+        top: 30px;
+        color: #fff;
+        .login_btn,.register_btn{
+          height: 30px;
+          width: 60px;
+          background: transparent;
+          color: #fff;
+          border: 1px solid #fff;
+          border-radius: 4px;
+          margin-left: 20px;
+          cursor: pointer;
+          &:hover{
+            background: #fff;
+            color: #333;
+           
+          }
+        }
+      }
       .logo {
         background: url(../assets/logo1.png) no-repeat;
         height: 32px;
@@ -17,6 +38,7 @@
         position: absolute;
         left: 50%;
         margin-left: -25%;
+        cursor: pointer;
       }
       .inputWrap {
         width: 40%;
@@ -26,7 +48,7 @@
     }
   }
   .content {
-    min-height: calc(100vh - 50px - 64px);
+    min-height: calc(100vh - 50px - 84px);
   }
   .footer {
     height: 50px;
