求助模块，组件剥离，解耦

--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -2,7 +2,7 @@
   .header {
     background: url(../assets/banner.png) no-repeat;
     background-size: cover;
-    height: 500px;
+    height: 45vh;
     position: relative;
     z-index: 999;
     line-height: 0;
