--- a/src/global.less
+++ b/src/global.less
@@ -46,6 +46,32 @@ body {
   }
 }
 
+.circle {
+  display: 'inline-block';
+  margin-right: 10px;
+  width: 26px;
+  height: 26px;
+  text-align: center;
+  line-height: 26px;
+  background: #f39800;
+  border-radius: 50%;
+  color: #fff;
+}
+
+.ask {
+  font-size: 16px;
+  color: #333;
+}
+.answer {
+  flex: 1;
+  height: 40px;
+  font-size: 14px;
+  color: #999;
+  overflow: hidden;
+  word-wrap: normal;
+  text-overflow: ellipsis;
+}
+
 .ecp_top-nav{
   height: 0 !important;
   width: 0 !important;
