--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -42,7 +42,7 @@
         width: 100%;
       }
     }
-    :global(.slick-slider){
+    :global(.slick-slider) {
       background: #fff;
       padding-top: 10px;
     }
@@ -76,7 +76,7 @@
         color: #096aee;
       }
     }
-    .more{
+    .more {
       width: 100px;
       height: 30px;
       background: #fff;
@@ -87,7 +87,7 @@
       line-height: 30px;
       margin: auto;
       cursor: pointer;
-      &:hover{
+      &:hover {
         background: #096aee;
         color: #fff;
       }
@@ -115,11 +115,15 @@
           -webkit-transition: all 1s ease 1s; /* Safari 和 Chrome */
           -o-transition: all 1s ease 1s;
           transform: scale(0, 0);
-          li{
+          li {
             padding: 20px;
           }
         }
         .subimg {
+          width: auto;
+          height: auto;
+          max-width: 100%;
+          max-height: 100%;
           display: block;
           transition: all 1s;
           -moz-transition: all 1s; /* Firefox 4 */
