--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -1,4 +1,8 @@
-.wrapper{
+.wrapper {
+  position: relative;
+  min-height: 100%;
+  padding-bottom: 50px;
+  box-sizing: border-box;
   .header {
     background: url(../assets/banner.png) no-repeat;
     background-size: cover;
@@ -6,12 +10,13 @@
     position: relative;
     z-index: 999;
     line-height: 0;
-    .login{
+    .login {
       position: absolute;
       right: 20px;
       top: 30px;
       color: #fff;
-      .login_btn,.register_btn{
+      .login_btn,
+      .register_btn {
         height: 30px;
         width: 60px;
         background: transparent;
@@ -20,15 +25,13 @@
         border-radius: 4px;
         margin-left: 20px;
         cursor: pointer;
-        &:hover{
+        &:hover {
           background: #fff;
           color: #333;
-
         }
       }
-
     }
-    .logo1{
+    .logo1 {
       background: url(../assets/随问logo.png) no-repeat;
       width: 265px;
       height: 42px;
@@ -36,7 +39,7 @@
       position: absolute;
       top: 20px;
     }
-    .logo2{
+    .logo2 {
       background: url(../assets/logo1.png) no-repeat;
       height: 92px;
       width: 150px;
@@ -46,15 +49,15 @@
       top: 90px;
       transform: translateX(-50%);
     }
-    .inputWrap{
+    .inputWrap {
       position: absolute;
       top: 200px;
       width: 720px;
       left: 50%;
       transform: translateX(-50%);
-      :global(.ant-input-group-addon){
+      :global(.ant-input-group-addon) {
         width: 120px;
-        :global(.ant-btn){
+        :global(.ant-btn) {
           width: 100%;
           border-top-left-radius: 0;
           border-bottom-left-radius: 0;
@@ -63,13 +66,14 @@
     }
   }
   .content {
-    min-height: calc(100vh - 450px);
-    width: 100%;
-    padding: 0 12.5%;
     background-image: url(../assets/home_content.png);
     background-size: cover;
+    height: 100%;
   }
   .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     height: 50px;
   }
 }
