--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -66,7 +66,7 @@
     }
   }
   .content {
-    background-image: url(../assets/home_content.png);
+    // background-image: url(../assets/home_content.png);
     background-size: cover;
     height: 100%;
   }
