--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -111,26 +111,33 @@
         :global(.slick-list) {
           height: 100%;
           .special_questions {
-            .specialItem {
+            .specialWrapper {
               background: #fff;
-            }
-            .picture {
-              display: table-cell;
-              vertical-align: middle;
-              text-align: center;
-            }
-            .title {
-              padding: 20px 0;
-            }
-            .questions {
-              color: #9a9ca4;
-              font-size: 18px;
-              font-weight: 400;
-              padding: 0 0 20px 0;
+              &:hover {
+                box-shadow: 0px 0px 24px 0px rgba(0, 132, 255, 0.2);
+              }
+              .picture {
+                width: 100%;
+                img {
+                  width: 100%;
+                }
+              }
+              .title {
+                padding: 20px;
+              }
+              .questions {
+                color: #9a9ca4;
+                font-size: 18px;
+                font-weight: 400;
+                padding-left: 20px;
+                padding-bottom: 20px;
+              }
             }
           }
 
           .special_help {
+            width: 100%;
+            padding: 0 !important;
             .help_left {
               background: url(../../assets//hotHelp.png);
               width: 400px;
@@ -149,7 +156,7 @@
                 white-space: nowrap;
                 padding-top: 15px;
                 cursor: pointer;
-                &:hover{
+                &:hover {
                   color: lightsalmon;
                 }
                 // &:last-child {
