--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -26,6 +26,7 @@
       .right_top {
         width: 100%;
         margin-bottom: 40px;
+        text-align: right;
         .tag {
           cursor: pointer;
           font-size: 16px;
