完成faq,句群，期刊，文献，工具书组件的开发

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -20,15 +20,31 @@
         margin-left: 100px;
         background-size: contain;
         cursor: pointer;
-        float: left;
         position: absolute;
         top: 50%;
         margin-top: -16px;
       }
+      .title{
+        color: #fff;
+        position: absolute;
+        left: 160px;
+        top: 40%;
+        height: 50px;
+        .cn{
+          height: 18px;
+          font-size: 16px;
+          font-weight: bold;
+        }
+        .en{
+          height: 12px;
+          font-size: 10px;
+          font-weight: bold;
+        }
+      }
       .inputWrap {
         float: left;
         position: absolute;
-        left: 200px;
+        left: 380px;
         top: 50%;
         margin-top: -20px;
         width: 38%;
