--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -25,9 +25,15 @@
         border-radius: 4px;
         margin-left: 20px;
         cursor: pointer;
+        a{
+          color: #fff;
+        }
         &:hover {
           background: #fff;
           color: #333;
+          a{
+            color: #333;
+          }
         }
       }
     }
