--- a/src/pages/result/components/SgList/index.less
+++ b/src/pages/result/components/SgList/index.less
@@ -5,6 +5,10 @@
     padding: 20px;
     background: #fff;
   }
+  :global(.ant-list-footer){
+    overflow: hidden;
+    padding-bottom: 0;
+  }
   .fontStyle {
     color: #333;
     letter-spacing: 2px;
@@ -15,6 +19,7 @@
     float: right;
     text-align: right;
     cursor: pointer;
+    color: #999;
     &:hover{
       color: lightsalmon;
     }
