--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -77,9 +77,15 @@
           border-radius: 4px;
           margin-left: 20px;
           cursor: pointer;
+          a{
+            color: #fff;
+          }
           &:hover {
             background: #fff;
             color: #333;
+            a{
+              color: #333;
+            }
           }
         }
       }
