--- a/src/components/SmartInput/inputRecord.less
+++ b/src/components/SmartInput/inputRecord.less
@@ -1,9 +1,11 @@
 .record-list {
   border: 1px solid #d9d9d9;
-  max-height: 300px;
-  overflow-y: scroll;
+  // max-height: 300px;
+  // overflow-y: scroll;
   :global(.ant-list-item) {
     padding-left: 11px;
+    padding-top: 6px;
+    padding-bottom: 6px;
     cursor: pointer;
     &:hover {
       background: #eee;
