--- a/src/global.less
+++ b/src/global.less
@@ -100,3 +100,31 @@ body {
   height: 34px !important;
   line-height: 34px !important;
 }
+
+
+
+// .ecp_top-nav{
+//   position: absolute;
+//   top: 0;
+//   widows: 100%;
+// }
+// .ecp_tn-nav{
+//   // display:none;
+// }
+// .tn-person-r{
+//   // display:none;
+// }
+// .ecp_tn-header{
+//   // display:none;
+// }
+
+// .outlogin_layerbox_bylx .layerbox_left{
+//   width: 300px !important;
+// }
+
+// .login-r .content{
+//   width: 290px !important;
+// }
+// .login-icon dl{
+//   height: 55px !important;
+// }
