--- a/src/pages/result/components/ReferenceBook/index.less
+++ b/src/pages/result/components/ReferenceBook/index.less
@@ -16,22 +16,23 @@
     text-indent: 2em;
     margin-bottom: 20px;
   }
+  .ReferenceBook_more {
+    color: #999;
+    cursor: pointer;
+    display: inline-block;
+    width: 100%;
+    padding: 10px 0;
+    text-align: right;
+  }
   .ReferenceBook_extra {
     text-align: right;
     .ReferenceBook_name {
       color: #999;
       cursor: pointer;
-      margin-right: 20px;
       &:hover {
         color: lightsalmon;
       }
     }
-    .ReferenceBook_more {
-      color: #0079ff;
-      cursor: pointer;
-      &:hover {
-        color: lightsalmon;
-      }
-    }
+
   }
 }
