--- a/src/components/SmartInput/index.less
+++ b/src/components/SmartInput/index.less
@@ -1,7 +1,7 @@
 .input-wrap {
   width: 100%;
   border-radius: 0;
-  .record-wrap {
+  :global(.record-wrap) {
     width: 100%;
     background: #fff;
     position: absolute;
