--- a/src/pages/result/components/FAQ/index.less
+++ b/src/pages/result/components/FAQ/index.less
@@ -1,5 +1,5 @@
 .FAQ {
-  padding: 20px;
+  padding: 20px 20px 10px;
   box-shadow: rgb(165, 165, 165) 0px 0px 10.8px 0px;
   margin-bottom: 10px;
   .wrapper {
