--- a/src/pages/result/components/SgList/index.less
+++ b/src/pages/result/components/SgList/index.less
@@ -14,12 +14,18 @@
     letter-spacing: 2px;
     line-height: 27.2px;
     text-indent: 2em;
+    p{
+      margin: 0;
+    }
   }
   .more {
     float: right;
     text-align: right;
     cursor: pointer;
     color: #999;
+    p{
+      margin: 0;
+    }
     &:hover{
       color: lightsalmon;
     }
