--- a/src/pages/result/components/Journal/index.less
+++ b/src/pages/result/components/Journal/index.less
@@ -1,5 +1,5 @@
 .Journal{
-  box-shadow: rgba(1, 123, 254, 0.22) 0px 0px 21px 0px;
+  box-shadow: #a5a5a5 0 0 10.8px 0;
   margin-bottom: 20px;
   padding: 20px;
   background: #fff;
